# trust-code

./: .gitignore  .readthedocs.yaml  DEVELOPER_NOTES  DEVELOPER_NOTES.md  FAQ  FAQ.md  License.txt  README  README.md  RELEASE_NOTES  RELEASE_NOTES.orig  ToDo  configure  env_for_python.sh  index.html  license  license.md
Outils/IHM/TRUST_PLOT2D/: CMakeLists.txt  Plot2d.sh.in  env.sh.in
Outils/IHM/TRUST_WIZARD/: AUTHORS  CMakeLists.txt  TRUST_Wizard.sh.in  env.sh.in
Outils/lance_test_seq_par/: CMakeLists.txt  Makefile  compare_sonde.cpp  lance_test_seq_par.cpp
Outils/lata2dx/lata2dx/: CMakeLists.txt  Doxyfile  LataConversion.py  LataLoader.cpp  LataLoader.h  LataLoader.i  Lata_to_case.py  Lata_to_med.py  Makefile.in  Plan_to_lata.py  build_lata2dx.sh  compare_lata.cpp  env.sh.in  install  lata2dx.cpp  lata2dx.h  license  merge_meds.py  new_build.sh  test_LataLoader.cpp
Outils/lata2dx/src/: CMakeLists.txt  build.sh
Outils/lata_tools/src/: CMakeLists.txt  build.sh
Outils/trustify/: Makefile  README.md  TODO.txt  check_all.sh  env.sh  install.sh  pyproject.toml  setup.py
Outils/trustify/doc/: README_dev.md  README_user.md
Outils/trustify/test/: TRAD_2_GENEPI_V17  reference_data.py  test_generate_pydantic.py  test_rw_all_datasets.py  test_rw_elementary.py  test_rw_full_datasets.py
Outils/trustify/tools/: check_single.sh  gen_doc.py  gen_doc.sh
src/CoviMAC/: CMakeLists.txt  Option_CoviMAC.cpp  Option_CoviMAC.h  instancie_src_CoviMAC.cpp  make.include
src/CoviMAC/Champs/: CMakeLists.txt  Champ_Face_CoviMAC.cpp  Champ_Face_CoviMAC.h  Champ_Fonc_Face_CoviMAC.cpp  Champ_Fonc_Face_CoviMAC.h  Champ_Fonc_P0_CoviMAC.cpp  Champ_Fonc_P0_CoviMAC.h  Champ_Fonc_P0_CoviMAC_TC.cpp  Champ_Fonc_P0_CoviMAC_TC.h  Champ_Fonc_P0_CoviMAC_rot.cpp  Champ_Fonc_P0_CoviMAC_rot.h  Champ_Fonc_P1_CoviMAC.cpp  Champ_Fonc_P1_CoviMAC.h  Champ_Fonc_Q1_CoviMAC.cpp  Champ_Fonc_Q1_CoviMAC.h  Champ_Fonc_Tabule_P0_CoviMAC.cpp  Champ_Fonc_Tabule_P0_CoviMAC.h  Champ_P0_CoviMAC.cpp  Champ_P0_CoviMAC.h  Champ_P1_CoviMAC.cpp  Champ_P1_CoviMAC.h  Champ_Q1_CoviMAC.cpp  Champ_Q1_CoviMAC.h  Ref_Champ_Face_CoviMAC.cpp  Ref_Champ_Face_CoviMAC.h  Ref_Champ_Fonc_P0_CoviMAC.cpp  Ref_Champ_Fonc_P0_CoviMAC.h  Ref_Champ_P0_CoviMAC.cpp  Ref_Champ_P0_CoviMAC.h  grad_Champ_Face_CoviMAC.cpp  grad_Champ_Face_CoviMAC.h  grad_U_Champ_Face_CoviMAC.cpp  grad_U_Champ_Face_CoviMAC.h  instancie_src_CoviMAC_Champs.cpp  make.include
src/CoviMAC/Cond_Lim/: CMakeLists.txt  Echange_contact_CoviMAC.cpp  Echange_contact_CoviMAC.h  instancie_src_CoviMAC_Cond_Lim.cpp  make.include
src/CoviMAC/Operateurs/: CMakeLists.txt  Op_Conv_Amont_CoviMAC_Face.cpp  Op_Conv_Amont_CoviMAC_Face.h  Op_Conv_Centre_CoviMAC_Face.cpp  Op_Conv_Centre_CoviMAC_Face.h  Op_Conv_CoviMAC_base.cpp  Op_Conv_CoviMAC_base.h  Op_Conv_EF_Stab_CoviMAC_Elem.cpp  Op_Conv_EF_Stab_CoviMAC_Elem.h  Op_Conv_EF_Stab_CoviMAC_Face.cpp  Op_Conv_EF_Stab_CoviMAC_Face.h  Op_Diff_CoviMAC_Elem.cpp  Op_Diff_CoviMAC_Elem.h  Op_Diff_CoviMAC_Face.cpp  Op_Diff_CoviMAC_Face.h  Op_Diff_CoviMAC_base.cpp  Op_Diff_CoviMAC_base.h  Op_Div_CoviMAC.cpp  Op_Div_CoviMAC.h  Op_Grad_CoviMAC_Face.cpp  Op_Grad_CoviMAC_Face.h  instancie_src_CoviMAC_Operateurs.cpp  make.include
src/CoviMAC/Solveur_U_P/: Appliquer_cl.cpp  Solveur_U_P.cpp  Solveur_U_P.h  instancie_src_CoviMAC_Solveur_U_P.cpp  make.include
src/CoviMAC/Solveurs/: Appliquer_cl.cpp  Assembleur_P_CoviMAC.cpp  Assembleur_P_CoviMAC.h  CMakeLists.txt  Masse_CoviMAC_Elem.cpp  Masse_CoviMAC_Elem.h  Masse_CoviMAC_Face.cpp  Masse_CoviMAC_Face.h  Solveur_UP.cpp  Solveur_UP.h  make.include  (+1 more)
src/IJK/: CMakeLists.txt  Option_IJK.cpp  Option_IJK.h  Redistribute_Field.cpp  Redistribute_Field.h  make.include
src/MAIN/: CMakeLists.txt  MAIN.cpp  MAIN.h  catch_and_trace.cpp  catch_and_trace.h  info_atelier.cpp  info_atelier.h  instancie_appel.h  instancie_appel_c.h  make.include  mon_main.cpp  mon_main.h  the_main.cpp
src/PolyMAC/: CMakeLists.txt  Option_PolyMAC.cpp  Option_PolyMAC.h  Option_PolyMAC_P0.cpp  Option_PolyMAC_P0.h  Option_PolyMAC_V2.cpp  Option_PolyMAC_V2.h  Option_PolyVEF.cpp  Option_PolyVEF.h  Option_PolyVEF_P0.cpp  Option_PolyVEF_P0.h  instancie_src_PolyMAC.cpp  instancie_src_PolyMAC_V2.cpp  make.include
src/ThHyd/: CMakeLists.txt  Champ_Ostwald.cpp  Champ_Ostwald.h  Champ_front_pression_from_u.cpp  Champ_front_pression_from_u.h  Champ_front_synt.cpp  Champ_front_synt.h  Constituant.cpp  Constituant.h  Convection_Diffusion_Concentration.cpp  Convection_Diffusion_Concentration.h  Convection_Diffusion_Temperature.cpp  Convection_Diffusion_Temperature.h  Convection_Diffusion_std.cpp  Convection_Diffusion_std.h  DP_Impose.cpp  DP_Impose.h  Dirichlet_entree_fluide.cpp  Dirichlet_entree_fluide.h  Dirichlet_paroi_defilante.cpp  Dirichlet_paroi_defilante.h  Dirichlet_paroi_fixe.cpp  Dirichlet_paroi_fixe.h  Discret_Thyd.cpp  Discret_Thyd.h  Entree_fluide_Fluctu_Temperature_imposee.cpp  Entree_fluide_Fluctu_Temperature_imposee.h  Entree_fluide_Flux_Chaleur_Turbulente_imposee.cpp  Entree_fluide_Flux_Chaleur_Turbulente_imposee.h  Entree_fluide_K_Eps_impose.cpp  Entree_fluide_K_Eps_impose.h  Entree_fluide_T_h_imposee.cpp  Entree_fluide_T_h_imposee.h  Entree_fluide_V2_impose.cpp  Entree_fluide_V2_impose.h  Entree_fluide_concentration_imposee.cpp  Entree_fluide_concentration_imposee.h  Entree_fluide_fraction_massique_imposee.cpp  Entree_fluide_fraction_massique_imposee.h  Entree_fluide_temperature_imposee.cpp  (+123 more)
src/VDF/: CMakeLists.txt  Option_VDF.cpp  Option_VDF.h  Trait_part_NS_canal_pulse_VDF.cpp  Traitement_particulier_NS_EC_VDF.cpp  Traitement_particulier_NS_EC_VDF.h  Traitement_particulier_NS_Pression_VDF.cpp  Traitement_particulier_NS_Pression_VDF.h  Traitement_particulier_NS_Profils_VDF.cpp  Traitement_particulier_NS_Profils_VDF.h  Traitement_particulier_NS_Profils_thermo_VDF.cpp  Traitement_particulier_NS_Profils_thermo_VDF.h  Traitement_particulier_NS_canal_VDF.cpp  Traitement_particulier_NS_canal_VDF.h  Traitement_particulier_Solide_canal_VDF.cpp  Traitement_particulier_Solide_canal_VDF.h  instancie_src_VDF.cpp  make.include
(+17557 files in other folders)
