file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/src/Kernel/Math                ${TRUST_ROOT}/src/Kernel/Utilitaires)
add_library(obj_covimac OBJECT  ${srcs} )
set(listlibs ${listlibs} covimac PARENT_SCOPE    )
add_custom_target(check_sources_covimac   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity covimac" )
add_DEPENDENCIES(obj_covimac check_sources_covimac)
if(COMPIL_DYN)
  add_library(covimac SHARED   $<TARGET_OBJECTS:obj_covimac> )
  install(TARGETS covimac  DESTINATION lib)
endif(COMPIL_DYN)
