file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${PETSC_ROOT}/${TRUST_ARCH}${OPT}/include  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${MPI_INCLUDE})
add_library(obj_main OBJECT  ${srcs} )
set(listlibs ${listlibs} main PARENT_SCOPE    )
add_custom_target(check_sources_main   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} COMMENT  "checking code validity main" )
add_DEPENDENCIES(obj_main check_sources_main)
if(COMPIL_DYN)
  add_library(main SHARED   $<TARGET_OBJECTS:obj_main> )
  install(TARGETS main  DESTINATION lib)
endif(COMPIL_DYN)
