file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/src/Kernel/Math                ${TRUST_ROOT}/src/Kernel/Utilitaires)
add_library(obj_polymac OBJECT  ${srcs} )
set(listlibs ${listlibs} polymac PARENT_SCOPE    )
add_custom_target(check_sources_polymac   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity polymac" )
add_DEPENDENCIES(obj_polymac check_sources_polymac)
if(COMPIL_DYN)
  add_library(polymac SHARED   $<TARGET_OBJECTS:obj_polymac> )
  install(TARGETS polymac  DESTINATION lib)
endif(COMPIL_DYN)
