file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward         ${TRUST_MED_ROOT}/include  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/MEDimpl  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/Kernel/VF/Champs  ${TRUST_ROOT}/src/ThSol )
add_library(obj_thhyd OBJECT  ${srcs} )
set(listlibs ${listlibs} thhyd PARENT_SCOPE    )
add_custom_target(check_sources_thhyd   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity thhyd" )
add_DEPENDENCIES(obj_thhyd check_sources_thhyd)
if(COMPIL_DYN)
  add_library(thhyd SHARED   $<TARGET_OBJECTS:obj_thhyd> )
  install(TARGETS thhyd  DESTINATION lib)
endif(COMPIL_DYN)
