file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThHyd/Modele_turbulence_base  ${TRUST_ROOT}/src/ThHyd/Quasi_Compressible  ${TRUST_ROOT}/src/ThSol  ${TRUST_ROOT}/src/VDF/Champs  ${TRUST_ROOT}/src/VDF/Operateurs  ${TRUST_ROOT}/src/VDF/Zones )
add_library(obj_vdf OBJECT  ${srcs} )
set(listlibs ${listlibs} vdf PARENT_SCOPE    )
add_custom_target(check_sources_vdf   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity vdf" )
add_DEPENDENCIES(obj_vdf check_sources_vdf)
if(COMPIL_DYN)
  add_library(vdf SHARED   $<TARGET_OBJECTS:obj_vdf> )
  install(TARGETS vdf  DESTINATION lib)
endif(COMPIL_DYN)
