file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/Math)
add_library(obj_vdf OBJECT  ${srcs} )
set(listlibs ${listlibs} vdf PARENT_SCOPE    )
add_custom_target(check_sources_vdf   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity vdf" )
add_DEPENDENCIES(obj_vdf check_sources_vdf)
if(COMPIL_DYN)
  add_library(vdf SHARED   $<TARGET_OBJECTS:obj_vdf> )
  install(TARGETS vdf  DESTINATION lib)
endif(COMPIL_DYN)
