CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10 FATAL_ERROR)
INCLUDE(CMakeDependentOption)

PROJECT(SalomeTRUST_WIZARD C CXX)

# Versioning
# ===========
# Project name, upper case
STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UC)

SET(${PROJECT_NAME_UC}_MAJOR_VERSION 7)
SET(${PROJECT_NAME_UC}_MINOR_VERSION 7)
SET(${PROJECT_NAME_UC}_PATCH_VERSION 0)
SET(${PROJECT_NAME_UC}_VERSION
  ${${PROJECT_NAME_UC}_MAJOR_VERSION}.${${PROJECT_NAME_UC}_MINOR_VERSION}.${${PROJECT_NAME_UC}_PATCH_VERSION})

# User options
# ============
OPTION(SALOME_BUILD_DOC "Generate SALOME TRUST_WIZARD documentation" ON)
OPTION(SALOME_BUILD_TESTS "Generate SALOME TRUST_WIZARD tests" ON)

# Find CURVEPLOT
# ==============
SET(CURVEPLOT_ROOT_DIR $ENV{CURVEPLOT_ROOT_DIR} CACHE PATH "Path to the Salome CURVEPLOT")
IF( EXISTS ${CURVEPLOT_ROOT_DIR} )
  LIST(APPEND CMAKE_MODULE_PATH "${CURVEPLOT_ROOT_DIR}/adm_local/cmake_files")
  INCLUDE(SalomeMacros)
  FIND_PACKAGE(SalomeCURVEPLOT REQUIRED)
ELSE()
  MESSAGE(FATAL_ERROR "We absolutely need Salome CURVEPLOT, please define CURVEPLOT_ROOT_DIR!")
ENDIF()
    
# Find MEDCOUPLING
# ==============
SET(MED_ROOT_DIR $ENV{MED_ROOT_DIR} CACHE PATH "Path to the Salome MEDCOUPLING")
SET(MEDCOUPLING_ROOT_DIR $ENV{MEDCOUPLING_ROOT_DIR} CACHE PATH "Path to the Salome MEDCOUPLING")
IF( EXISTS ${MEDCOUPLING_ROOT_DIR} )
  LIST(APPEND CMAKE_MODULE_PATH "${MEDCOUPLING_ROOT_DIR}/cmake_files")
  INCLUDE(SalomeMacros)
  FIND_PACKAGE(SalomeMEDCoupling REQUIRED)
ELSE()
  MESSAGE(FATAL_ERROR "We absolutely need Salome MEDCOUPLING, please define MEDCOUPLING_ROOT_DIR!")
ENDIF()
# Prerequisites
# =============

# Mandatory products
FIND_PACKAGE(SalomePythonInterp    REQUIRED)
FIND_PACKAGE(SalomePythonLibs    REQUIRED)

# Qt4
FIND_PACKAGE(SalomeQt4 REQUIRED COMPONENTS QtCore QtGui)

IF(SALOME_BUILD_DOC)
#  FIND_PACKAGE(SalomeDoxygen)
#  FIND_PACKAGE(SalomeSphinx)
#  SALOME_LOG_OPTIONAL_PACKAGE(Doxygen SALOME_BUILD_DOC)
#  SALOME_LOG_OPTIONAL_PACKAGE(Sphinx SALOME_BUILD_DOC)
#  ADD_DEFINITIONS(-DDOXYGEN_IS_OK)
ENDIF()

IF(SALOME_BUILD_TESTS)
  ENABLE_TESTING()
ENDIF()

# Detection summary:
SALOME_PACKAGE_REPORT_AND_CHECK()

# Directories
# ===========
SET(SALOME_INSTALL_LIBS "${SALOME_INSTALL_LIBS}" CACHE PATH "Install path: SALOME libs")
SET(SALOME_INSTALL_PYTHON "${SALOME_INSTALL_PYTHON}" CACHE PATH 
    "Install path: SALOME Python scripts")
SET(SALOME_INSTALL_SCRIPT_PYTHON "${SALOME_INSTALL_SCRIPT_PYTHON}" CACHE PATH 
    "Install path: SALOME Python scripts")
SET(SALOME_INSTALL_CMAKE_LOCAL ${SALOME_INSTALL_CMAKE_LOCAL} CACHE PATH 
    "Install path: local SALOME CMake files") 
SET(SALOME_INSTALL_RES "${SALOME_INSTALL_RES}" CACHE PATH "Install path: SALOME resources")
SET(SALOME_INSTALL_DOC "${SALOME_INSTALL_DOC}" CACHE PATH "Install path: SALOME documentation")
SET(SALOME_INSTALL_HEADERS ${SALOME_INSTALL_HEADERS} CACHE PATH "Install path: SALOME headers")
 
# Specific to TRUST_WIZARD:   
SET(SALOME_TRUST_WIZARD_INSTALL_RES_DATA ${SALOME_INSTALL_RES}/trust_wizard CACHE PATH "Install path: SALOME TRUST_WIZARD specific resources")

# Sources 
# ========
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(resources)
IF(SALOME_BUILD_DOC)
#   ADD_SUBDIRECTORY(doc)
ENDIF()

configure_file(env.sh.in env.sh @ONLY)
configure_file(TRUST_Wizard.sh.in TRUST_Wizard.sh @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/env.sh  ${CMAKE_CURRENT_BINARY_DIR}/TRUST_Wizard.sh DESTINATION . )
