file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Schemas_Temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/CoviMAC/Cond_Lim  ${TRUST_ROOT}/src/CoviMAC/Champs  ${TRUST_ROOT}/src/CoviMAC/Operateurs  ${TRUST_ROOT}/src/CoviMAC/Zones  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThHyd/Modele_turbulence_base  ${TRUST_ROOT}/src/ThHyd/Turbulence  ${TRUST_ROOT}/src/ThSol)
add_library(obj_covimac_champs OBJECT  ${srcs} )
set(listlibs ${listlibs} covimac_champs PARENT_SCOPE    )
add_custom_target(check_sources_covimac_champs   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity covimac_champs" )
add_DEPENDENCIES(obj_covimac_champs check_sources_covimac_champs)
if(COMPIL_DYN)
  add_library(covimac_champs SHARED   $<TARGET_OBJECTS:obj_covimac_champs> )
  install(TARGETS covimac_champs  DESTINATION lib)
endif(COMPIL_DYN)
