file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/CoviMAC/Champs  ${TRUST_ROOT}/src/CoviMAC/Operateurs  ${TRUST_ROOT}/src/CoviMAC/Zones  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Schemas_Temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/ThHyd/Incompressible/Cond_Lim  ${TRUST_ROOT}/src/ThHyd/Modele_turbulence_base  ${TRUST_ROOT}/src/ThHyd/Turbulence  ${TRUST_ROOT}/src/ThSol )
add_library(obj_covimac_cond_lim OBJECT  ${srcs} )
set(listlibs ${listlibs} covimac_cond_lim PARENT_SCOPE    )
add_custom_target(check_sources_covimac_cond_lim   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity covimac_cond_lim" )
add_DEPENDENCIES(obj_covimac_cond_lim check_sources_covimac_cond_lim)
if(COMPIL_DYN)
  add_library(covimac_cond_lim SHARED   $<TARGET_OBJECTS:obj_covimac_cond_lim> )
  install(TARGETS covimac_cond_lim  DESTINATION lib)
endif(COMPIL_DYN)
