file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/CoviMAC/Champs  ${TRUST_ROOT}/src/CoviMAC/Zones  ${TRUST_ROOT}/src/CoviMAC/Solveurs  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThHyd/Multiphase  ${TRUST_ROOT}/src/ThHyd/Multiphase/Correlations  ${TRUST_ROOT}/src/ThHyd/Multiphase/Equations  ${TRUST_ROOT}/src/ThHyd/Multiphase/Operateurs  ${TRUST_ROOT}/src/ThHyd/Multiphase/Schemas_Temps  ${TRUST_ROOT}/src/ThHyd/Multiphase/CoviMAC  ${TRUST_ROOT}/src/ThSol)
add_library(obj_covimac_sources OBJECT  ${srcs} )
set(listlibs ${listlibs} covimac_sources PARENT_SCOPE    )
add_custom_target(check_sources_covimac_sources   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity covimac_sources" )
add_DEPENDENCIES(obj_covimac_sources check_sources_covimac_sources)
if(COMPIL_DYN)
  add_library(covimac_sources SHARED   $<TARGET_OBJECTS:obj_covimac_sources> )
  install(TARGETS covimac_sources  DESTINATION lib)
endif(COMPIL_DYN)
