file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/EF/Champs  ${TRUST_ROOT}/src/EF/Zones  ${TRUST_ROOT}/src/EF/fortran  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThSol )
add_library(obj_opef OBJECT  ${srcs} )
set(listlibs ${listlibs} opef PARENT_SCOPE    )
add_custom_target(check_sources_opef   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity opef" )
add_DEPENDENCIES(obj_opef check_sources_opef)
if(COMPIL_DYN)
  add_library(opef SHARED   $<TARGET_OBJECTS:obj_opef> )
  install(TARGETS opef  DESTINATION lib)
endif(COMPIL_DYN)
