file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/P1NCP1B/Zones  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThHyd/Quasi_Compressible  ${TRUST_ROOT}/src/ThSol  ${TRUST_ROOT}/src/EF/Champs  ${TRUST_ROOT}/src/EF/Operateurs  ${TRUST_ROOT}/src/EF/Sources/Evaluateurs  ${TRUST_ROOT}/src/EF/Sources/Iterateurs  ${TRUST_ROOT}/src/EF/Zones )
add_library(obj_soef OBJECT  ${srcs} )
set(listlibs ${listlibs} soef PARENT_SCOPE    )
add_custom_target(check_sources_soef   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity soef" )
add_DEPENDENCIES(obj_soef check_sources_soef)
if(COMPIL_DYN)
  add_library(soef SHARED   $<TARGET_OBJECTS:obj_soef> )
  install(TARGETS soef  DESTINATION lib)
endif(COMPIL_DYN)
