file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires )
add_library(obj_iinteref OBJECT  ${srcs} )
set(listlibs ${listlibs} iinteref PARENT_SCOPE    )
add_custom_target(check_sources_iinteref   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity iinteref" )
add_DEPENDENCIES(obj_iinteref check_sources_iinteref)
if(COMPIL_DYN)
  add_library(iinteref SHARED   $<TARGET_OBJECTS:obj_iinteref> )
  install(TARGETS iinteref  DESTINATION lib)
endif(COMPIL_DYN)
