file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward         ${TRUST_ROOT}/src/Kernel/Utilitaires         ${TRUST_ROOT}/src/Kernel/Math         ${TRUST_ROOT}/src/Kernel/Geometrie         ${TRUST_ROOT}/src/IJK/Framework         ${TRUST_ROOT}/src/IJK/Vecto)
add_library(obj_ijk_champs OBJECT  ${srcs} )
set(listlibs ${listlibs} ijk_champs PARENT_SCOPE    )
add_custom_target(check_sources_ijk_champs   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ijk_champs" )
add_DEPENDENCIES(obj_ijk_champs check_sources_ijk_champs)
if(COMPIL_DYN)
  add_library(ijk_champs SHARED   $<TARGET_OBJECTS:obj_ijk_champs> )
  install(TARGETS ijk_champs  DESTINATION lib)
endif(COMPIL_DYN)
