file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward         ${TRUST_ROOT}/src/Kernel/Utilitaires         ${TRUST_ROOT}/src/Kernel/Math         ${TRUST_ROOT}/src/Kernel/Math/SolvSys         ${TRUST_ROOT}/src/Kernel/Math/Matrices         ${TRUST_ROOT}/src/Kernel/Geometrie         ${TRUST_ROOT}/src/Kernel/Framework         ${TRUST_ROOT}/src/Kernel/VF/Zones         ${TRUST_ROOT}/src/IJK/Champs                ${TRUST_ROOT}/src/IJK/Framework         ${TRUST_ROOT}/src/IJK/Vecto)
add_library(obj_ijk_multigrille OBJECT  ${srcs} )
set(listlibs ${listlibs} ijk_multigrille PARENT_SCOPE    )
add_custom_target(check_sources_ijk_multigrille   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ijk_multigrille" )
add_DEPENDENCIES(obj_ijk_multigrille check_sources_ijk_multigrille)
if(COMPIL_DYN)
  add_library(ijk_multigrille SHARED   $<TARGET_OBJECTS:obj_ijk_multigrille> )
  install(TARGETS ijk_multigrille  DESTINATION lib)
endif(COMPIL_DYN)
