file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ICOCOAPI}/include)
add_library(obj_noyaucl OBJECT  ${srcs} )
set(listlibs ${listlibs} noyaucl PARENT_SCOPE    )
add_custom_target(check_sources_noyaucl   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} COMMENT  "checking code validity noyaucl" )
add_DEPENDENCIES(obj_noyaucl check_sources_noyaucl)
if(COMPIL_DYN)
  add_library(noyaucl SHARED   $<TARGET_OBJECTS:obj_noyaucl> )
  install(TARGETS noyaucl  DESTINATION lib)
endif(COMPIL_DYN)
